# jupyterhub-kube-metrics

./: .gitignore  README.md  jupyterhub_config.py  pyproject.toml  requirements.txt
app/: __main__.py  controller.py  main.py  models.py  service.py
app/config/: settings.py
app/core/: kubernetes_client.py  models.py
app/core/kubernetes/: __init__.py  kubernetes_client.py
app/infrastructure/: server.py
