[tool.poetry]
name = "jupyterhub-kube-monitoring"
version = "0.1.0"
description = ""
authors = ["yansfil <tansfil@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
single-source = "^0.2.0"
fastapi = "^0.70.1"
httpx = "^0.21.1"
uvicorn = {extras = ["standard"], version = "^0.16.0"}
python-multipart = "^0.0.5"
kubernetes = "^21.7.0"

[tool.poetry.dev-dependencies]
pre-commit = "^2.16.0"
black = "^21.5"
isort = "^5.10.1"
pycln = "^1.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
